# Web3-Rust-Chat-App_Scott-Zhanyi

./: .env  .gitignore  README.md
chatapp/: Cargo.toml
chatapp/src/: contract_queries.rs  main.rs
chatapp/src/contracts/: chatCoin_contract_ABI.json  chatCoin_contract_bytecode.json  smart.abi.json
chatapp/static/: index.html  reset.css  script.js  style.css
