[package]
name = "chatapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
time = "0.3.15"
shuttle-service = { version = "0.11.0", features = ["web-rocket"] }

reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = { version = "0.6", features = ["rustls"]}
web3 = "0.18.0"
tokio = { version = "1.15.0", features = ["full"] }
secp256k1 = "0.21.0"
tracing-subscriber = "0.3.17"

# s3 & read env value
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
dotenv = "0.15.0"
chrono = "0.4"
rust-s3 = "0.27.0-rc4"


#IPFS
ipfs-api = "0.17"


[dev-dependencies]
rand = "0.8"



[lib]
name = "chat_app"
path = "src/lib.rs"
